--- a/src/pages/details/Details.scss
+++ b/src/pages/details/Details.scss
@@ -1,13 +1,18 @@
 .Details {
-    margin-top: 141px;
-    margin-bottom: 140px;
+  margin-top: 141px;
+  margin-bottom: 140px;
   .product {
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 70px;
+    .left {
+      img {
+        width: 630px;
+        height: 647px;
+      }
+    }
     .right {
-        
       width: 370px;
 
       .par {
@@ -110,61 +115,61 @@
 }
 
 .Second {
-    .par {
-      text-align: center;
-      h1 {
-        color: #122947;
-        font-size: 32px;
-        font-weight: 500;
-        line-height: 125%; 
-        margin-bottom: 60px;
-      }
-    }
-    .latests{
-      display: flex;
-      align-items: center;
-      column-gap: 30px;
-      justify-content: center;
-      .card {
-          background-image: url("../../../public/card1.png");
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-          justify-content: end;
-          width: 270px;
-          height: 350px;
-          background-position: center;
-          .card-content {
-            display: flex;
-            align-items: center;
-            column-gap: 75px;
-            padding-bottom: 20px;
-            .left {
-              display: flex;
-              flex-direction: column;
-              align-items: start;
-              h3 {
-                color: #122947;
-                font-size: 16px;
-                font-weight: 500;
-                line-height: 145%;
-              }
-              p {
-                color: #9a9da0;
-                font-size: 13px;
-                font-weight: 400;
-                line-height: 145%;
-              }
-            }
-          }
-        }
-    }
-    .btns {
-      display: flex;
-      align-items: center;
-      column-gap: 10px;
-      justify-content: center;
-      margin-top: 20px;
-      margin-bottom: 146px;
+  .par {
+    text-align: center;
+    h1 {
+      color: #122947;
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 125%;
+      margin-bottom: 60px;
     }
   }
+  .latests {
+    display: flex;
+    align-items: center;
+    column-gap: 30px;
+    justify-content: center;
+    .card {
+      background-image: url("../../../public/card1.png");
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: end;
+      width: 270px;
+      height: 350px;
+      background-position: center;
+      .card-content {
+        display: flex;
+        align-items: center;
+        column-gap: 75px;
+        padding-bottom: 20px;
+        .left {
+          display: flex;
+          flex-direction: column;
+          align-items: start;
+          h3 {
+            color: #122947;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 145%;
+          }
+          p {
+            color: #9a9da0;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 145%;
+          }
+        }
+      }
+    }
+  }
+  .btns {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 146px;
+  }
+}
