--- a/src/pages/hero/Home.scss
+++ b/src/pages/hero/Home.scss
@@ -42,25 +42,34 @@
     }
     .card {
       display: flex;
-      align-items: center;
+      // align-items: center;
       flex-direction: column;
       justify-content: end;
-      background-image: url("../../../public/card1.png");
+      // background-image: url("../../../public/card1.png");
       width: 230px;
       height: 312px;
       background-position: center;
+      img{
+      position: relative;
+      }
       h3 {
         color: #122947;
         font-size: 16px;
         font-weight: 500;
         line-height: 145%;
-        // margin-bottom: 10px;
+        margin-bottom: 10px;
+        position: absolute;
+        margin-left: 90px;
+        margin-bottom: 60px;
       }
       p {
         color: #9a9da0;
         font-size: 13px;
         font-weight: 400;
         line-height: 145%;
+        position: absolute;
+        margin-left: 70px;
+        margin-bottom: 40px;
       }
       a {
         color: #122947;
@@ -69,7 +78,11 @@
         line-height: 145%;
         text-decoration: #122947 underline;
         padding-bottom: 25px;
+        position: absolute;
+        margin-left: 75px;
+        margin-bottom: -10px;
       }
+
     }
     .card2 {
       background-image: url("../../../public/card2.png");
